force-app/main/default/objects/Resume_Skill__c/Resume_Skill__c.object-meta.xml
<CustomObject>
    <label>Resume Skill</label>
    <nameField>
        <label>Resume Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resume Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>