force-app/main/default/objects/Resume_Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <description>e.g., &quot;Apex&quot;, &quot;JavaScript&quot;, &quot;Project Management&quot;.</description>
    <label>Skill Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>