force-app/main/default/objects/Resume_Skill__c/fields/Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Skill_Type__c</fullName>
    <label>Skill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Skill</fullName>
            </value>
            <value>
                <fullName>Soft Skill</fullName>
            </value>
            <value>
                <fullName>Tool/Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>